fixed issues with merging.

--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -305,11 +305,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 7,
-=======
    "execution_count": 5,
->>>>>>> Stashed changes
    "metadata": {
     "scrolled": true
    },
@@ -507,11 +503,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 8,
-=======
    "execution_count": 7,
->>>>>>> Stashed changes
    "metadata": {
     "scrolled": true
    },
@@ -551,11 +543,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< Updated upstream
-   "execution_count": 9,
-=======
    "execution_count": 8,
->>>>>>> Stashed changes
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +590,7 @@
     "\n",
     "In particular, when $\\beta = 0.5$, more emphasis is placed on precision. This is called the **F$_{0.5}$ score** (or F-score for simplicity).\n",
     "\n",
-    "Looking at the distribution of classes (those who make at most \\\\$50,000, and those who make more), it is clear most individuals do not make more than \\$50,000. This can greatly affect **accuracy**, since we could simply say *\"this person does not make more than \\$50,000\"* and generally be right, without ever looking at the data! Making such a statement would be called **naive**, since we have not considered any information to substantiate the claim. It is always important to consider the *naive prediction* for your data, to help establish a benchmark for whether a model is performing well. That been said, using that prediction would be pointless: If we predicted all people made less than \\$50,000, *CharityML* would identify no one as donors. \n",
+    "Looking at the distribution of classes (those who make at most \\$50,000, and those who make more), it's clear most individuals do not make more than \\$50,000. This can greatly affect **accuracy**, since we could simply say *\"this person does not make more than \\$50,000\"* and generally be right, without ever looking at the data! Making such a statement would be called **naive**, since we have not considered any information to substantiate the claim. It is always important to consider the *naive prediction* for your data, to help establish a benchmark for whether a model is performing well. That been said, using that prediction would be pointless: If we predicted all people made less than \\$50,000, *CharityML* would identify no one as donors. \n",
     "\n",
     "\n",
     "#### Note: Recap of accuracy, precision, recall\n",
@@ -629,9 +617,9 @@
     "### Question 1 - Naive Predictor Performace\n",
     "* If we chose a model that always predicted an individual made more than $50,000, what would  that model's accuracy and F-score be on this dataset? You must use the code cell below and assign your results to `'accuracy'` and `'fscore'` to be used later.\n",
     "\n",
-    "**Please note** that the the purpose of generating a naive predictor is simply to show what a base model without any intelligence would look like. In the real world, ideally your base model would be either the results of a previous model or could be based on a research paper upon which you are looking to improve. When there is no benchmark model set, getting a result better than random choice is a place you could start from.\n",
+    "** Please note ** that the the purpose of generating a naive predictor is simply to show what a base model without any intelligence would look like. In the real world, ideally your base model would be either the results of a previous model or could be based on a research paper upon which you are looking to improve. When there is no benchmark model set, getting a result better than random choice is a place you could start from.\n",
     "\n",
-    "**HINT:** \n",
+    "** HINT: ** \n",
     "\n",
     "* When we have a model that always predicts '1' (i.e. the individual makes more than 50k) then our model will have no True Negatives(TN) or False Negatives(FN) as we are not making any negative('0' value) predictions. Therefore our Accuracy in this case becomes the same as our Precision(True Positives/(True Positives + False Positives)) as every prediction that we have made with value '1' that should have '0' becomes a False Positive; therefore our denominator in this case is the total number of records we have in total. \n",
     "* Our Recall score(True Positives/(True Positives + False Negatives)) in this setting becomes 1 as we have no False Negatives."
@@ -639,36 +627,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Naive Predictor: [Accuracy score: 0.2478, F-score: 0.2917]\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "# Counting the ones as this is the naive case.\n",
-    "# Note that 'income' is the 'income_raw' data encoded to numerical values done in the data preprocessing step.\n",
-    "TP = np.sum(income)\n",
-    "# Specific to the naive case\n",
-    "FP = income.size - TP\n",
+    "'''\n",
+    "TP = np.sum(income) # Counting the ones as this is the naive case. Note that 'income' is the 'income_raw' data \n",
+    "encoded to numerical values done in the data preprocessing step.\n",
+    "FP = income.count() - TP # Specific to the naive case\n",
     "\n",
-    "# No negatives are predicted in the naive case\n",
-    "TN = 0\n",
-    "FN = 0\n",
-    "\n",
+    "TN = 0 # No predicted negatives in the naive case\n",
+    "FN = 0 # No predicted negatives in the naive case\n",
+    "'''\n",
     "# TODO: Calculate accuracy, precision and recall\n",
-    "accuracy = (TP + TN) / (TP + TN + FP + FN)\n",
-    "recall = TP / (TP + FN)\n",
-    "precision = TP / (TP + FP)\n",
+    "accuracy = None\n",
+    "recall = None\n",
+    "precision = None\n",
     "\n",
     "# TODO: Calculate F-score using the formula above for beta = 0.5 and correct values for precision and recall.\n",
-    "beta = 0.5\n",
-    "fscore = (1 + beta**2) * ( (precision * recall) / ((beta**2 * precision) + recall) )\n",
+    "fscore = None\n",
     "\n",
     "# Print the results \n",
     "print(\"Naive Predictor: [Accuracy score: {:.4f}, F-score: {:.4f}]\".format(accuracy, fscore))"
